--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="home">
@@ -35,25 +38,59 @@
             </div>
         </div>
     </div>
-    <div class="bd">
-        <div class="peace">
-            <img src="images/person.png" alt="" class="img">
-            <h5>Peace of Mind</h5>
-            <p>So it really behaves like neither.</p>
-            <p>Now we have given up.</p>
-        </div>
-        <div class="peace">
-            <img src="images/person.png" alt="" class="img">
-            <h5>Set for Life</h5>
-            <p>They were used to create the machines that launched</p>
-        </div>
-        <div class="peace">
-            <img src="images/person.png" alt="" class="img">
-            <h5>100% satisfaction</h5>
-            <p>So it really behaves like neither.</p>
-            <p>Now we have given up.</p>
+    <div #="bd">
+        <!-- <div class="floatTop">
+            <div class="card">
+                <img src="images/person.png" alt="" class="img">
+                <h5>Peace of Mind</h5>
+                <p>The quick fox jumps over the lazy dog</p>
+            </div>
+            <div class="card">
+                <img src="images/person.png" alt="" class="img">
+                <h5>Set for Life</h5>
+                <p>The quick fox jumps over the lazy dog</p>
+            </div>
+            <div class="card">
+                <img src="images/person.png" alt="" class="img">
+                <h5>100% Satisfaction</h5>
+                <p>The quick fox jumps over the lazy dog</p>
+            </div>
+        </div> -->
+        <div class="content1">
+            <div class="peace">
+                <img src="images/person.png" alt="" class="img">
+                <h5>Peace of Mind</h5>
+                <p>So it really behaves like neither.</p>
+                <p>Now we have given up.</p>
+            </div>
+            <div class="peace">
+                <img src="images/person.png" alt="" class="img">
+                <h5>Set for Life</h5>
+                <p>They were used to create the machines that launched</p>
+            </div>
+            <div class="peace">
+                <img src="images/person.png" alt="" class="img">
+                <h5>100% satisfaction</h5>
+                <p>So it really behaves like neither.</p>
+                <p>Now we have given up.</p>
+            </div>
         </div>
     </div>
-    
+    <div id="industry">
+        <h1>Industry</h1>
+        <p>Problems trying to resolve the conflicts between the two major realms of Classical Physics: Newtonian mechanics</p>
+        <div class="industryCard">
+            <img src="images/user1.png" alt="">
+            <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
+        </div>
+        <div class="industryCard">
+            <img src="images/user2.png" alt="">
+            <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
+        </div>
+        <div class="industryCard">
+            <img src="images/user3.png" alt="">
+            <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
+        </div>
+    </div>
 </body>
 </html>
