Modified the stylings to look more similar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div #="bd">
-        <!-- <div class="floatTop">
+        <div class="floatTop">
             <div class="card">
                 <img src="images/person.png" alt="" class="img">
                 <h5>Peace of Mind</h5>
@@ -55,7 +55,7 @@
                 <h5>100% Satisfaction</h5>
                 <p>The quick fox jumps over the lazy dog</p>
             </div>
-        </div> -->
+        </div>
         <div class="content1">
             <div class="peace">
                 <img src="images/person.png" alt="" class="img">
@@ -78,18 +78,56 @@
     </div>
     <div id="industry">
         <h1>Industry</h1>
-        <p>Problems trying to resolve the conflicts between the two major realms of Classical Physics: Newtonian mechanics</p>
-        <div class="industryCard">
-            <img src="images/user1.png" alt="">
-            <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
-        </div>
-        <div class="industryCard">
-            <img src="images/user2.png" alt="">
-            <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
-        </div>
-        <div class="industryCard">
-            <img src="images/user3.png" alt="">
-            <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
+        <p class="desc">Problems trying to resolve the conflicts between the two major realms of Classical Physics: Newtonian mechanics</p>
+       <div class="cards">
+            <div class="industryCard">
+                <img src="images/user1.png" alt="">
+                <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
+                <div class="ratings">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                </div>
+            </div>
+            <div class="industryCard">
+                <img src="images/user2.png" alt="">
+                <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
+                <div class="ratings">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                </div>
+            </div>
+            <div class="industryCard">
+                <img src="images/user3.png" alt="">
+                <p>Slates helps you see how many more days you need to work to reach your financial goal for the month and year</p>
+                <div class="ratings">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                    <img src="images/icon-star.svg" alt="">
+                </div>
+            </div>
+       </div>
+    </div>
+    <div class="logos">
+        <img src="images/Vector.png" alt="" class="images">
+        <img src="images/Vector-1.png" alt="" class="images">
+        <img src="images/Vector-2.png" alt="" class="images">
+        <img src="images/Vector-3.png" alt="" class="images">
+        <img src="images/Vector-4.png" alt="" class="images">
+        <img src="images/Vector-5.png" alt="" class="images">
+    </div>
+    <div class="gradient">
+        <p>Subscribe For Latest News Letter</p>
+        <div>
+            <input type="text" placeholder="Your Email">
+            <button>Subscribe</button>
         </div>
     </div>
 </body>
