Added pricing section and modified some styling

--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
                    <p>  Login</p>
                    <button>Become a Member</button>
             </div>
-            <!-- <div class="member">
-                <button>Become a Member</button>
-            </div> -->
         </div>
         <div class="body-content">
             <h1>We Ensure A Best <br>Insurance Service</h1>
@@ -36,26 +33,27 @@
                 <button class="btn1">Get Quote Now</button>
                 <button class="btn2">Learn More</button>
             </div>
+            <div class="floatTop">
+                <div class="card">
+                    <img src="images/person.png" alt="" class="img">
+                    <h5>Peace of Mind</h5>
+                    <p>The quick fox jumps over the lazy dog</p>
+                </div>
+                <div class="card">
+                    <img src="images/person.png" alt="" class="img">
+                    <h5>Set for Life</h5>
+                    <p>The quick fox jumps over the lazy dog</p>
+                </div>
+                <div class="card">
+                    <img src="images/person.png" alt="" class="img">
+                    <h5>100% Satisfaction</h5>
+                    <p>The quick fox jumps over the lazy dog</p>
+                </div>
+            </div>
         </div>
+
     </div>
     <div #="bd">
-        <div class="floatTop">
-            <div class="card">
-                <img src="images/person.png" alt="" class="img">
-                <h5>Peace of Mind</h5>
-                <p>The quick fox jumps over the lazy dog</p>
-            </div>
-            <div class="card">
-                <img src="images/person.png" alt="" class="img">
-                <h5>Set for Life</h5>
-                <p>The quick fox jumps over the lazy dog</p>
-            </div>
-            <div class="card">
-                <img src="images/person.png" alt="" class="img">
-                <h5>100% Satisfaction</h5>
-                <p>The quick fox jumps over the lazy dog</p>
-            </div>
-        </div>
         <div class="content1">
             <div class="peace">
                 <img src="images/person.png" alt="" class="img">
@@ -115,6 +113,7 @@
             </div>
        </div>
     </div>
+   
     <div class="logos">
         <img src="images/Vector.png" alt="" class="images">
         <img src="images/Vector-1.png" alt="" class="images">
@@ -130,5 +129,119 @@
             <button>Subscribe</button>
         </div>
     </div>
+    
+    <div id="pricing">
+        <h1>Pricing</h1>
+        <p>Problems trying to resolve the conflict between <br>the two major realms of classical physics:Newtonian mechanism</p>
+        <div class="priceContainer">
+        <div class="free">
+            <h2>Free</h2>
+            <p class="organize">Organize across all apps by hand</p>
+            <div class="price">
+                <p class="amount">0</p>
+                <div class="dollar">
+                    <p>$</p>
+                    <p>Per Month</p>
+                </div>
+            </div>
+                <div class="tick">
+                    <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                    <p>unlimited product Updates</p>
+                </div>
+                <div class="tick">
+                    <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                    <p>unlimited product Updates</p>
+                </div>
+                <div class="tick">
+                    <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                    <p>unlimited product Updates</p>
+                </div>
+                <div class="tick">
+                    <ion-icon name="checkmark-circle" class="gray"></ion-icon>
+                    <p>KCB Cloud Storage</p>
+                </div>
+                <div class="tick">
+                    <ion-icon name="checkmark-circle" class="gray"></ion-icon> 
+                    <p>Email and community support</p>      
+                </div>
+                <button class="cardBtn">Try for free</button>
+        </div>
+        <div class="standard">
+            <h2>Standard</h2>
+            <p class="organize">Organize across all apps by hand</p>
+            <div class="price">
+                <p class="amount">9.99</p>
+                <div class="dollar">
+                    <p>$</p>
+                    <p>Per Month</p>
+                </div>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                <p>unlimited product Updates</p>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                <p>unlimited product Updates</p>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                <p>unlimited product Updates</p>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="gray"></ion-icon>
+                <p>KCB Cloud Storage</p>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="gray"></ion-icon> 
+                <p>Email and community support</p>      
+            </div>
+            <button class="cardBtn">Try for free</button>
+        </div>
+        <div class="premium">
+            <h2>Premium</h2>
+            <p class="organize">Organize across all apps by hand</p>
+            <div class="price">
+                <p class="amount">19.99</p>
+                <div class="dollar">
+                    <p>$</p>
+                    <p>Per Month</p>
+                </div>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                <p>unlimited product Updates</p>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                <p>unlimited product Updates</p>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="green"></ion-icon>
+                <p>unlimited product Updates</p>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="gray"></ion-icon>
+                <p>KCB Cloud Storage</p>
+            </div>
+            <div class="tick">
+                <ion-icon name="checkmark-circle" class="gray"></ion-icon> 
+                <p>Email and community support</p>      
+            </div>
+            <button class="cardBtn">Try for free</button>
+        </div>
+    </div>
+    </div>
+    <div id="branches">
+        <div class="branchContent">
+            <h1>We Have Branches All Over The World</h1>
+            <p>The gradual accumilation of information about atomic and small-scale behavior during the first quarter of the 20th century, which gave some indication  about how small things do behave,produced on increasing  confusion which was Heisenberg and Born</p>
+        </div>
+        <div class="map">
+            <img src="" alt="">
+        </div>
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
