--- a/index.html
+++ b/index.html
@@ -233,12 +233,79 @@
     </div>
     </div>
     <div id="branches">
-        <div class="branchContent">
-            <h1>We Have Branches All Over The World</h1>
-            <p>The gradual accumilation of information about atomic and small-scale behavior during the first quarter of the 20th century, which gave some indication  about how small things do behave,produced on increasing  confusion which was Heisenberg and Born</p>
+        <div class="upper">
+            <div class="branchContent">
+                <h1>We Have Branches All Over The World</h1>
+                <p>The gradual accumilation of information about atomic and small-scale behavior during the first quarter of the 20th century, which gave some indication  about how small things do behave,produced on increasing  confusion which was Heisenberg and Born</p>
+            </div>
+            <div class="map">
+                <img src="images/pingwig.png" alt="">
+            </div>
         </div>
-        <div class="map">
-            <img src="" alt="">
+        <!-- <div class="appointment">
+            <div class="fam">
+                <img src="images/contact.png" alt="">
+            </div>
+            <div class="details">
+                <h2>Book Appointment</h2>
+                <input type="text" placeholder="Full Name" id="name" required>
+                <input type="text" name="email address" id="email" placeholder="example@gmail.com">
+                <select name="" id="">Please Select
+                    <option value="">Science</option>
+                </select>
+                <input type="text" placeholder="400 Available">
+            </div>
+        </div> -->
+    </div>
+    <div id="footer">
+        <div class="footerContent">
+            <div class="text">
+                <h4>Consulting Agency For Your Business</h4>
+                <p>the quick fox jumps over the lazy dog</p>
+            </div>
+            <button class="contact">Contact Us</button>
+        </div>
+        <div class="footerLinks">
+            <div class="info">
+                <h5>Company Info</h5>
+                <ul>
+                    <li>About Us</li>
+                    <li>Carrier</li>
+                    <li>We are hiring</li>
+                    <li>Blog</li>
+            </div>
+            <div class="info">
+                <h5>Legal</h5>
+                <ul>
+                    <li>About Us</li>
+                    <li>Carrier</li>
+                    <li>We are hiring</li>
+                    <li>Blog</li>
+            </div>
+            <div class="info">
+                <h5>Features</h5>
+                <ul>
+                    <li>Business Marketing</li>
+                    <li>User Analytic</li>
+                    <li>Live Chart</li>
+                    <li>Unlimited Support</li>
+            </div>
+            <div class="info">
+                <h5>Resources</h5>
+                <ul>
+                    <li>IOS $ Android</li>
+                    <li>Watch a Demo</li>
+                    <li>Customers</li>
+                    <li>API</li>
+            </div>
+            <div class="info">
+                <h5>Get In Touch</h5>
+                <ul>
+                    <li>About Us</li>
+                    <li>Carrier</li>
+                    <li>We are hiring</li>
+                    <li>Blog</li>
+            </div>
         </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
